Try to fix ugly scrollbar with solutions that don't work in consuming apps.

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -17,3 +17,7 @@
   --day-selected-segment-font-color: white;
   --day-syntax-label-background: lightgrey;
 }
+
+::-webkit-scrollbar {
+  width: 0;
+}
